--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:43:00 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:43:43 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -168,8 +168,8 @@ E thru 2</td>
 +1 thru 14</td>
       <td class="greyout leftborder">Shane Lowry +1
 E thru 5</td>
-      <td class="greyout">Justin Thomas(W) +3
--1 thru 2</td>
+      <td class="greyout">Justin Thomas(W) +2
+-2 thru 3</td>
     </tr>
     <tr>
       <td class="bigbold">Doug Muir</td>
@@ -376,8 +376,8 @@ E thru 2</td>
 -1 thru 14</td>
       <td class="greyout leftborder">Robert MacIntyre +2
 +1 (F)</td>
-      <td class="greyout">Rory McIlroy +4
-+3 thru 12</td>
+      <td class="greyout">Rory McIlroy +3
++2 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Wilson</td>
@@ -476,6 +476,22 @@ E thru 12</td>
 +2 thru 13</td>
     </tr>
     <tr>
+      <td class="bigbold">Bill Hunter</td>
+      <td class="bigbold">-2</td>
+      <td>Cameron Smith(W) -2
++2 thru 4</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Hideki Matsuyama -1
+-1 thru 2</td>
+      <td>Justin Thomas +2
+-2 thru 3</td>
+      <td class="greyout leftborder">Marc Leishman +3
++2 thru 17</td>
+      <td class="greyout">Xander Schauffele +6
++4 thru 13</td>
+    </tr>
+    <tr>
       <td class="bigbold">Shane Tummon</td>
       <td class="bigbold">-2</td>
       <td>Tony Finau -2
@@ -540,18 +556,18 @@ E thru 12</td>
 +4 thru 13</td>
     </tr>
     <tr>
-      <td class="bigbold">Bill Hunter</td>
+      <td class="bigbold">New Lu</td>
       <td class="bigbold">-1</td>
-      <td>Cameron Smith(W) -2
+      <td>Cameron Smith -2
 +2 thru 4</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Hideki Matsuyama -1
--1 thru 2</td>
-      <td>Marc Leishman +3
-+2 thru 17</td>
-      <td class="greyout leftborder">Justin Thomas +3
--1 thru 2</td>
+      <td>Patrick Cantlay -1
++1 thru 14</td>
+      <td>Will Zalatoris E
++1 thru 14</td>
+      <td>Justin Thomas(W) +2
+-2 thru 3</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 12</td>
       <td class="greyout">Xander Schauffele +6
 +4 thru 13</td>
     </tr>
@@ -566,10 +582,26 @@ E thru 12</td>
 +1 thru 14</td>
       <td>Shane Lowry +1
 E thru 5</td>
-      <td class="greyout leftborder">Justin Thomas(W) +3
--1 thru 2</td>
+      <td class="greyout leftborder">Justin Thomas(W) +2
+-2 thru 3</td>
       <td class="greyout">Brooks Koepka +3
 E thru 12</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Stan and Ollie Garch</td>
+      <td class="bigbold">-1</td>
+      <td>Scottie Scheffler -3
+E thru 2</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Shane Lowry +1
+E thru 5</td>
+      <td>Justin Thomas(W) +2
+-2 thru 3</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 12</td>
+      <td class="greyout">Jordan Spieth +4
++2 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Low Golf IQ</td>
@@ -620,36 +652,20 @@ E thru 8</td>
 +2 thru 13</td>
     </tr>
     <tr>
-      <td class="bigbold">New Lu</td>
+      <td class="bigbold">Baggy Pants</td>
       <td class="bigbold">0</td>
       <td>Cameron Smith -2
 +2 thru 4</td>
       <td>Patrick Cantlay -1
 +1 thru 14</td>
-      <td>Will Zalatoris E
-+1 thru 14</td>
-      <td>Justin Thomas(W) +3
--1 thru 2</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 12</td>
-      <td class="greyout">Xander Schauffele +6
-+4 thru 13</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Stan and Ollie Garch</td>
-      <td class="bigbold">0</td>
-      <td>Scottie Scheffler -3
-E thru 2</td>
-      <td>Corey Conners -1
-+1 (F)</td>
       <td>Shane Lowry +1
 E thru 5</td>
-      <td>Justin Thomas(W) +3
--1 thru 2</td>
-      <td class="greyout leftborder">Brooks Koepka +3
+      <td>Justin Thomas(W) +2
+-2 thru 3</td>
+      <td class="greyout leftborder">Viktor Hovland +3
++3 thru 13</td>
+      <td class="greyout">Brooks Koepka +3
 E thru 12</td>
-      <td class="greyout">Jordan Spieth +4
-+2 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Neville Spillman</td>
@@ -668,6 +684,38 @@ E thru 12</td>
 +2 thru 16</td>
     </tr>
     <tr>
+      <td class="bigbold">Jack Fleck</td>
+      <td class="bigbold">0</td>
+      <td>Cameron Smith -2
++2 thru 4</td>
+      <td>Hideki Matsuyama -1
+-1 thru 2</td>
+      <td>Tiger Woods +1
++2 thru 3</td>
+      <td>Justin Thomas +2
+-2 thru 3</td>
+      <td class="greyout leftborder">Rory McIlroy(W) +3
++2 thru 13</td>
+      <td class="greyout">Xander Schauffele +6
++4 thru 13</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Santorini Sunsets</td>
+      <td class="bigbold">1</td>
+      <td>Scottie Scheffler -3
+E thru 2</td>
+      <td>Patrick Cantlay -1
++1 thru 14</td>
+      <td>Justin Thomas(W) +2
+-2 thru 3</td>
+      <td>Viktor Hovland +3
++3 thru 13</td>
+      <td class="greyout leftborder">Rory McIlroy +3
++2 thru 13</td>
+      <td class="greyout">Xander Schauffele +6
++4 thru 13</td>
+    </tr>
+    <tr>
       <td class="bigbold">Lorette Hosegood</td>
       <td class="bigbold">1</td>
       <td>Dustin Johnson -2
@@ -676,28 +724,44 @@ E thru 12</td>
 +1 thru 14</td>
       <td>Jon Rahm +1
 -1 thru 14</td>
-      <td>Viktor Hovland +3
+      <td>Rory McIlroy(W) +3
++2 thru 13</td>
+      <td class="greyout leftborder">Viktor Hovland +3
 +3 thru 13</td>
-      <td class="greyout leftborder">Rory McIlroy(W) +4
-+3 thru 12</td>
       <td class="greyout">Jordan Spieth +4
 +2 thru 13</td>
     </tr>
     <tr>
-      <td class="bigbold">Baggy Pants</td>
+      <td class="bigbold">Philip Dale</td>
       <td class="bigbold">1</td>
-      <td>Cameron Smith -2
-+2 thru 4</td>
+      <td>Scottie Scheffler -3
+E thru 2</td>
       <td>Patrick Cantlay -1
 +1 thru 14</td>
-      <td>Shane Lowry +1
-E thru 5</td>
-      <td>Justin Thomas(W) +3
--1 thru 2</td>
-      <td class="greyout leftborder">Viktor Hovland +3
-+3 thru 13</td>
-      <td class="greyout">Brooks Koepka +3
+      <td>Justin Thomas(W) +2
+-2 thru 3</td>
+      <td>Brooks Koepka +3
 E thru 12</td>
+      <td class="greyout leftborder">Jordan Spieth +4
++2 thru 13</td>
+      <td class="greyout">Xander Schauffele +6
++4 thru 13</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Roy Jeffrey A</td>
+      <td class="bigbold">1</td>
+      <td>Patrick Cantlay -1
++1 thru 14</td>
+      <td>Hideki Matsuyama -1
+-1 thru 2</td>
+      <td>Jon Rahm(W) +1
+-1 thru 14</td>
+      <td>Justin Thomas +2
+-2 thru 3</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 12</td>
+      <td class="greyout">Jordan Spieth +4
++2 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
@@ -716,68 +780,20 @@ E thru 12</td>
 +2 thru 13</td>
     </tr>
     <tr>
-      <td class="bigbold">Jack Fleck</td>
-      <td class="bigbold">1</td>
-      <td>Cameron Smith -2
-+2 thru 4</td>
-      <td>Hideki Matsuyama -1
--1 thru 2</td>
-      <td>Tiger Woods +1
-+2 thru 3</td>
-      <td>Justin Thomas +3
--1 thru 2</td>
-      <td class="greyout leftborder">Rory McIlroy(W) +4
-+3 thru 12</td>
-      <td class="greyout">Xander Schauffele +6
-+4 thru 13</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Santorini Sunsets</td>
-      <td class="bigbold">2</td>
-      <td>Scottie Scheffler -3
-E thru 2</td>
-      <td>Patrick Cantlay -1
-+1 thru 14</td>
-      <td>Justin Thomas(W) +3
--1 thru 2</td>
-      <td>Viktor Hovland +3
-+3 thru 13</td>
-      <td class="greyout leftborder">Rory McIlroy +4
-+3 thru 12</td>
-      <td class="greyout">Xander Schauffele +6
-+4 thru 13</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Philip Dale</td>
-      <td class="bigbold">2</td>
-      <td>Scottie Scheffler -3
-E thru 2</td>
-      <td>Patrick Cantlay -1
-+1 thru 14</td>
-      <td>Justin Thomas(W) +3
--1 thru 2</td>
-      <td>Brooks Koepka +3
-E thru 12</td>
-      <td class="greyout leftborder">Jordan Spieth +4
-+2 thru 13</td>
-      <td class="greyout">Xander Schauffele +6
-+4 thru 13</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Roy Jeffrey A</td>
+      <td class="bigbold">Al Shulman</td>
       <td class="bigbold">2</td>
       <td>Patrick Cantlay -1
 +1 thru 14</td>
-      <td>Hideki Matsuyama -1
--1 thru 2</td>
-      <td>Jon Rahm(W) +1
+      <td>Daniel Berger E
++1 thru 4</td>
+      <td>Jon Rahm +1
 -1 thru 14</td>
-      <td>Brooks Koepka +3
-E thru 12</td>
-      <td class="greyout leftborder">Justin Thomas +3
--1 thru 2</td>
-      <td class="greyout">Jordan Spieth +4
-+2 thru 13</td>
+      <td>Justin Thomas(W) +2
+-2 thru 3</td>
+      <td class="greyout leftborder">Viktor Hovland +3
++3 thru 13</td>
+      <td class="greyout">Xander Schauffele +6
++4 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Grace</td>
@@ -790,38 +806,22 @@ E thru 12</td>
 +1 thru 14</td>
       <td>Viktor Hovland +3
 +3 thru 13</td>
-      <td class="greyout leftborder">Rory McIlroy +4
-+3 thru 12</td>
+      <td class="greyout leftborder">Rory McIlroy +3
++2 thru 13</td>
       <td class="greyout">Xander Schauffele(W) +6
 +4 thru 13</td>
     </tr>
     <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">3</td>
-      <td>Patrick Cantlay -1
-+1 thru 14</td>
-      <td>Daniel Berger E
-+1 thru 4</td>
-      <td>Jon Rahm +1
--1 thru 14</td>
-      <td>Justin Thomas(W) +3
--1 thru 2</td>
-      <td class="greyout leftborder">Viktor Hovland +3
-+3 thru 13</td>
-      <td class="greyout">Xander Schauffele +6
-+4 thru 13</td>
-    </tr>
-    <tr>
       <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">3</td>
+      <td class="bigbold">2</td>
       <td>Cameron Smith(W) -2
 +2 thru 4</td>
       <td>Corey Conners -1
 +1 (F)</td>
+      <td>Justin Thomas +2
+-2 thru 3</td>
       <td>Viktor Hovland +3
 +3 thru 13</td>
-      <td>Justin Thomas +3
--1 thru 2</td>
       <td class="greyout leftborder">Jordan Spieth +4
 +2 thru 13</td>
       <td class="greyout">Xander Schauffele +6
@@ -829,35 +829,67 @@ E thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Jabby</td>
-      <td class="bigbold">3</td>
+      <td class="bigbold">2</td>
       <td>Corey Conners -1
 +1 (F)</td>
       <td>Will Zalatoris E
 +1 thru 14</td>
       <td>Jon Rahm +1
 -1 thru 14</td>
-      <td>Justin Thomas(W) +3
--1 thru 2</td>
+      <td>Justin Thomas(W) +2
+-2 thru 3</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 12</td>
-      <td class="greyout">Rory McIlroy +4
-+3 thru 12</td>
+      <td class="greyout">Rory McIlroy +3
++2 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Wylie</td>
-      <td class="bigbold">3</td>
+      <td class="bigbold">2</td>
       <td>Scottie Scheffler -3
 E thru 2</td>
       <td>Will Zalatoris E
 +1 thru 14</td>
-      <td>Justin Thomas(W) +3
--1 thru 2</td>
+      <td>Justin Thomas(W) +2
+-2 thru 3</td>
       <td>Brooks Koepka +3
 E thru 12</td>
       <td class="greyout leftborder">Xander Schauffele +6
 +4 thru 13</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Ez Game Ez Life</td>
+      <td class="bigbold">3</td>
+      <td>Collin Morikawa E
+-1 thru 15</td>
+      <td>Will Zalatoris E
++1 thru 14</td>
+      <td>Tiger Woods(W) +1
++2 thru 3</td>
+      <td>Justin Thomas +2
+-2 thru 3</td>
+      <td class="greyout leftborder">Viktor Hovland +3
++3 thru 13</td>
+      <td class="greyout">Rory McIlroy +3
++2 thru 13</td>
+    </tr>
+    <tr>
+      <td class="bigbold">NewCastle Magpies</td>
+      <td class="bigbold">4</td>
+      <td>Patrick Cantlay -1
++1 thru 14</td>
+      <td>Collin Morikawa E
+-1 thru 15</td>
+      <td>Justin Thomas(W) +2
+-2 thru 3</td>
+      <td>Brooks Koepka +3
+E thru 12</td>
+      <td class="greyout leftborder">Jordan Spieth +4
++2 thru 13</td>
+      <td class="greyout">Xander Schauffele +6
++4 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
@@ -876,22 +908,6 @@ E thru 12</td>
 +4 thru 13</td>
     </tr>
     <tr>
-      <td class="bigbold">Ez Game Ez Life</td>
-      <td class="bigbold">4</td>
-      <td>Collin Morikawa E
--1 thru 15</td>
-      <td>Will Zalatoris E
-+1 thru 14</td>
-      <td>Tiger Woods(W) +1
-+2 thru 3</td>
-      <td>Viktor Hovland +3
-+3 thru 13</td>
-      <td class="greyout leftborder">Justin Thomas +3
--1 thru 2</td>
-      <td class="greyout">Rory McIlroy +4
-+3 thru 12</td>
-    </tr>
-    <tr>
       <td class="bigbold">Glitter Girl</td>
       <td class="bigbold">4</td>
       <td>Cameron Smith -2
@@ -902,8 +918,8 @@ E thru 12</td>
 +1 (F)</td>
       <td>Viktor Hovland +3
 +3 thru 13</td>
-      <td class="greyout leftborder">Rory McIlroy +4
-+3 thru 12</td>
+      <td class="greyout leftborder">Rory McIlroy +3
++2 thru 13</td>
       <td class="greyout">Jordan Spieth +4
 +2 thru 13</td>
     </tr>
@@ -918,22 +934,22 @@ E thru 2</td>
 +3 thru 13</td>
       <td>Brooks Koepka +3
 E thru 12</td>
-      <td class="greyout leftborder">Rory McIlroy +4
-+3 thru 12</td>
+      <td class="greyout leftborder">Rory McIlroy +3
++2 thru 13</td>
       <td class="greyout">Xander Schauffele +6
 +4 thru 13</td>
     </tr>
     <tr>
-      <td class="bigbold">NewCastle Magpies</td>
+      <td class="bigbold">Brian McDonald</td>
       <td class="bigbold">5</td>
-      <td>Patrick Cantlay -1
-+1 thru 14</td>
-      <td>Collin Morikawa E
--1 thru 15</td>
-      <td>Justin Thomas(W) +3
--1 thru 2</td>
-      <td>Brooks Koepka +3
-E thru 12</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Jon Rahm(W) +1
+-1 thru 14</td>
+      <td>Justin Thomas +2
+-2 thru 3</td>
+      <td>Rory McIlroy +3
++2 thru 13</td>
       <td class="greyout leftborder">Jordan Spieth +4
 +2 thru 13</td>
       <td class="greyout">Xander Schauffele +6
@@ -941,35 +957,67 @@ E thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Hasbulla</td>
-      <td class="bigbold">6</td>
+      <td class="bigbold">5</td>
       <td>Patrick Cantlay(W) -1
 +1 thru 14</td>
       <td>Jon Rahm +1
 -1 thru 14</td>
+      <td>Justin Thomas +2
+-2 thru 3</td>
       <td>Brooks Koepka +3
 E thru 12</td>
-      <td>Justin Thomas +3
--1 thru 2</td>
-      <td class="greyout leftborder">Rory McIlroy +4
-+3 thru 12</td>
+      <td class="greyout leftborder">Rory McIlroy +3
++2 thru 13</td>
       <td class="greyout">Xander Schauffele +6
 +4 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">7</td>
+      <td class="bigbold">6</td>
       <td>Will Zalatoris E
 +1 thru 14</td>
       <td>Jon Rahm +1
 -1 thru 14</td>
-      <td>Justin Thomas(W) +3
--1 thru 2</td>
+      <td>Justin Thomas(W) +2
+-2 thru 3</td>
       <td>Viktor Hovland +3
 +3 thru 13</td>
       <td class="greyout leftborder">Jordan Spieth +4
 +2 thru 13</td>
       <td class="greyout">Sam Burns +5
 +2 thru 16</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">6</td>
+      <td>Collin Morikawa(W) E
+-1 thru 15</td>
+      <td>Tiger Woods +1
++2 thru 3</td>
+      <td>Justin Thomas +2
+-2 thru 3</td>
+      <td>Viktor Hovland +3
++3 thru 13</td>
+      <td class="greyout leftborder">Rory McIlroy +3
++2 thru 13</td>
+      <td class="greyout">Gary Woodland +8
++5 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Kash Ahmad</td>
+      <td class="bigbold">6</td>
+      <td>Will Zalatoris E
++1 thru 14</td>
+      <td>Jon Rahm(W) +1
+-1 thru 14</td>
+      <td>Justin Thomas +2
+-2 thru 3</td>
+      <td>Viktor Hovland +3
++3 thru 13</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 12</td>
+      <td class="greyout">Jordan Spieth +4
++2 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
@@ -988,94 +1036,14 @@ E thru 12</td>
 +2 thru 13</td>
     </tr>
     <tr>
-      <td class="bigbold">Downhill Down Wind</td>
-      <td class="bigbold">7</td>
-      <td>Collin Morikawa(W) E
--1 thru 15</td>
-      <td>Tiger Woods +1
-+2 thru 3</td>
-      <td>Viktor Hovland +3
-+3 thru 13</td>
-      <td>Justin Thomas +3
--1 thru 2</td>
-      <td class="greyout leftborder">Rory McIlroy +4
-+3 thru 12</td>
-      <td class="greyout">Gary Woodland +8
-+5 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Brian McDonald</td>
-      <td class="bigbold">7</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Jon Rahm(W) +1
--1 thru 14</td>
-      <td>Justin Thomas +3
--1 thru 2</td>
-      <td>Rory McIlroy +4
-+3 thru 12</td>
-      <td class="greyout leftborder">Jordan Spieth +4
-+2 thru 13</td>
-      <td class="greyout">Xander Schauffele +6
-+4 thru 13</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">7</td>
-      <td>Will Zalatoris E
-+1 thru 14</td>
-      <td>Jon Rahm(W) +1
--1 thru 14</td>
-      <td>Viktor Hovland +3
-+3 thru 13</td>
-      <td>Brooks Koepka +3
-E thru 12</td>
-      <td class="greyout leftborder">Justin Thomas +3
--1 thru 2</td>
-      <td class="greyout">Jordan Spieth +4
-+2 thru 13</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Tony Muir</td>
-      <td class="bigbold">10</td>
-      <td>Jon Rahm(W) +1
--1 thru 14</td>
-      <td>Viktor Hovland +3
-+3 thru 13</td>
-      <td>Brooks Koepka +3
-E thru 12</td>
-      <td>Justin Thomas +3
--1 thru 2</td>
-      <td class="greyout leftborder">Xander Schauffele +6
-+4 thru 13</td>
-      <td class="greyout">Louis Oosthuizen
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Yellow in Augusta</td>
-      <td class="bigbold">10</td>
-      <td>Jon Rahm +1
--1 thru 14</td>
-      <td>Justin Thomas(W) +3
--1 thru 2</td>
-      <td>Viktor Hovland +3
-+3 thru 13</td>
-      <td>Brooks Koepka +3
-E thru 12</td>
-      <td class="greyout leftborder">Jordan Spieth +4
-+2 thru 13</td>
-      <td class="greyout">Xander Schauffele +6
-+4 thru 13</td>
-    </tr>
-    <tr>
       <td class="bigbold">Benjac</td>
-      <td class="bigbold">10</td>
+      <td class="bigbold">8</td>
       <td>Cameron Smith -2
 +2 thru 4</td>
-      <td>Justin Thomas(W) +3
--1 thru 2</td>
-      <td>Rory McIlroy +4
-+3 thru 12</td>
+      <td>Justin Thomas(W) +2
+-2 thru 3</td>
+      <td>Rory McIlroy +3
++2 thru 13</td>
       <td>Sam Burns +5
 +2 thru 16</td>
       <td class="greyout leftborder">Xander Schauffele +6
@@ -1084,12 +1052,44 @@ E thru 12</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Bryan Francis</td>
-      <td class="bigbold">11</td>
+      <td class="bigbold">Tony Muir</td>
+      <td class="bigbold">9</td>
+      <td>Jon Rahm(W) +1
+-1 thru 14</td>
+      <td>Justin Thomas +2
+-2 thru 3</td>
+      <td>Viktor Hovland +3
++3 thru 13</td>
+      <td>Brooks Koepka +3
+E thru 12</td>
+      <td class="greyout leftborder">Xander Schauffele +6
++4 thru 13</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Yellow in Augusta</td>
+      <td class="bigbold">9</td>
       <td>Jon Rahm +1
 -1 thru 14</td>
-      <td>Justin Thomas(W) +3
--1 thru 2</td>
+      <td>Justin Thomas(W) +2
+-2 thru 3</td>
+      <td>Viktor Hovland +3
++3 thru 13</td>
+      <td>Brooks Koepka +3
+E thru 12</td>
+      <td class="greyout leftborder">Jordan Spieth +4
++2 thru 13</td>
+      <td class="greyout">Xander Schauffele +6
++4 thru 13</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Bryan Francis</td>
+      <td class="bigbold">10</td>
+      <td>Jon Rahm +1
+-1 thru 14</td>
+      <td>Justin Thomas(W) +2
+-2 thru 3</td>
       <td>Viktor Hovland +3
 +3 thru 13</td>
       <td>Jordan Spieth +4
