--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:43:00 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:43:43 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -152,8 +152,24 @@ E thru 2</td>
 +1 thru 14</td>
       <td class="greyout leftborder">Shane Lowry +1
 E thru 5</td>
-      <td class="greyout">Justin Thomas(W) +3
--1 thru 2</td>
+      <td class="greyout">Justin Thomas(W) +2
+-2 thru 3</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Scott Williamson</td>
+      <td class="bigbold">-3</td>
+      <td>Sungjae Im -4
++1 thru 17</td>
+      <td>Patrick Cantlay -1
++1 thru 14</td>
+      <td>Collin Morikawa E
+-1 thru 15</td>
+      <td>Justin Thomas +2
+-2 thru 3</td>
+      <td class="greyout leftborder">Viktor Hovland(W) +3
++3 thru 13</td>
+      <td class="greyout">Brooks Koepka +3
+E thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Larry Judge</td>
@@ -172,22 +188,6 @@ E thru 2</td>
 +4 thru 13</td>
     </tr>
     <tr>
-      <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">-2</td>
-      <td>Sungjae Im -4
-+1 thru 17</td>
-      <td>Patrick Cantlay -1
-+1 thru 14</td>
-      <td>Collin Morikawa E
--1 thru 15</td>
-      <td>Viktor Hovland(W) +3
-+3 thru 13</td>
-      <td class="greyout leftborder">Justin Thomas +3
--1 thru 2</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 12</td>
-    </tr>
-    <tr>
       <td class="bigbold">Al Shulman</td>
       <td class="bigbold">-2</td>
       <td>Tony Finau -2
@@ -198,10 +198,26 @@ E thru 12</td>
 +1 thru 14</td>
       <td>Daniel Berger E
 +1 thru 4</td>
-      <td class="greyout leftborder">Justin Thomas(W) +3
--1 thru 2</td>
+      <td class="greyout leftborder">Justin Thomas(W) +2
+-2 thru 3</td>
       <td class="greyout">Brooks Koepka +3
 E thru 12</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Paxton Watson</td>
+      <td class="bigbold">-2</td>
+      <td>Joaquin Niemann -3
+E thru 3</td>
+      <td>Cameron Smith -2
++2 thru 4</td>
+      <td>Tommy Fleetwood(W) +1
+-2 thru 4</td>
+      <td>Justin Thomas +2
+-2 thru 3</td>
+      <td class="greyout leftborder">Viktor Hovland +3
++3 thru 13</td>
+      <td class="greyout">Rory McIlroy +3
++2 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
@@ -236,22 +252,6 @@ E thru 12</td>
 +2 thru 13</td>
     </tr>
     <tr>
-      <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-1</td>
-      <td>Joaquin Niemann -3
-E thru 3</td>
-      <td>Cameron Smith -2
-+2 thru 4</td>
-      <td>Tommy Fleetwood(W) +1
--2 thru 4</td>
-      <td>Justin Thomas +3
--1 thru 2</td>
-      <td class="greyout leftborder">Viktor Hovland +3
-+3 thru 13</td>
-      <td class="greyout">Rory McIlroy +4
-+3 thru 12</td>
-    </tr>
-    <tr>
       <td class="bigbold">Andrew Winchester</td>
       <td class="bigbold">-1</td>
       <td>Cameron Smith -2
@@ -262,8 +262,8 @@ E thru 3</td>
 +1 thru 14</td>
       <td>Shane Lowry +1
 E thru 5</td>
-      <td class="greyout leftborder">Justin Thomas(W) +3
--1 thru 2</td>
+      <td class="greyout leftborder">Justin Thomas(W) +2
+-2 thru 3</td>
       <td class="greyout">Brooks Koepka +3
 E thru 12</td>
     </tr>
@@ -280,8 +280,8 @@ E thru 12</td>
 +1 thru 16</td>
       <td class="greyout leftborder">Shane Lowry +1
 E thru 5</td>
-      <td class="greyout">Justin Thomas(W) +3
--1 thru 2</td>
+      <td class="greyout">Justin Thomas(W) +2
+-2 thru 3</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
@@ -294,8 +294,8 @@ E thru 5</td>
 -1 thru 15</td>
       <td>Brooks Koepka +3
 E thru 12</td>
-      <td class="greyout leftborder">Rory McIlroy +4
-+3 thru 12</td>
+      <td class="greyout leftborder">Rory McIlroy +3
++2 thru 13</td>
       <td class="greyout">Xander Schauffele +6
 +4 thru 13</td>
     </tr>
@@ -333,13 +333,13 @@ E thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">3</td>
+      <td class="bigbold">2</td>
       <td>Dustin Johnson -2
 +1 thru 15</td>
       <td>Corey Conners -1
 +1 (F)</td>
-      <td>Justin Thomas +3
--1 thru 2</td>
+      <td>Justin Thomas +2
+-2 thru 3</td>
       <td>Russell Henley +3
 +2 (F)</td>
       <td class="greyout leftborder">Xander Schauffele(W) +6
@@ -349,19 +349,35 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">3</td>
+      <td class="bigbold">2</td>
       <td>Cameron Smith(W) -2
 +2 thru 4</td>
       <td>Corey Conners -1
 +1 (F)</td>
+      <td>Justin Thomas +2
+-2 thru 3</td>
       <td>Viktor Hovland +3
 +3 thru 13</td>
-      <td>Justin Thomas +3
--1 thru 2</td>
       <td class="greyout leftborder">Jordan Spieth +4
 +2 thru 13</td>
       <td class="greyout">Xander Schauffele +6
 +4 thru 13</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Adam Ryan</td>
+      <td class="bigbold">6</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Jon Rahm +1
+-1 thru 14</td>
+      <td>Justin Thomas(W) +2
+-2 thru 3</td>
+      <td>Jordan Spieth +4
++2 thru 13</td>
+      <td class="greyout leftborder">Xander Schauffele +6
++4 thru 13</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
@@ -378,22 +394,6 @@ E thru 12</td>
 +1 (F)</td>
       <td class="greyout">Luke List +7
 +2 thru 7</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Adam Ryan</td>
-      <td class="bigbold">7</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Jon Rahm +1
--1 thru 14</td>
-      <td>Justin Thomas(W) +3
--1 thru 2</td>
-      <td>Jordan Spieth +4
-+2 thru 13</td>
-      <td class="greyout leftborder">Xander Schauffele +6
-+4 thru 13</td>
-      <td class="greyout">Louis Oosthuizen
-Missed Cut</td>
     </tr>
   </tbody>
 </table>
