--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:46:35 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:47:18 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -452,10 +452,10 @@ E thru 2</td>
 +2 thru 4</td>
       <td>Patrick Cantlay -1
 +1 thru 14</td>
-      <td>Brooks Koepka +3
+      <td>Billy Horschel +3
++1 thru 16</td>
+      <td class="greyout leftborder">Brooks Koepka +3
 E thru 13</td>
-      <td class="greyout leftborder">Billy Horschel +4
-+2 thru 15</td>
       <td class="greyout">Xander Schauffele +6
 +4 thru 13</td>
     </tr>
@@ -657,7 +657,7 @@ E thru 8</td>
       <td>Corey Conners(W) -1
 +1 (F)</td>
       <td>Daniel Berger E
-+1 thru 4</td>
++1 thru 5</td>
       <td>Collin Morikawa E
 -1 thru 15</td>
       <td>Jon Rahm +1
@@ -785,7 +785,7 @@ E thru 13</td>
       <td>Patrick Cantlay -1
 +1 thru 14</td>
       <td>Daniel Berger E
-+1 thru 4</td>
++1 thru 5</td>
       <td>Jon Rahm +1
 -1 thru 14</td>
       <td>Justin Thomas(W) +2
