--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:47:18 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:48:01 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -166,10 +166,10 @@ E thru 6</td>
 -1 thru 15</td>
       <td>Justin Thomas +2
 -2 thru 3</td>
-      <td class="greyout leftborder">Viktor Hovland(W) +3
-+3 thru 13</td>
-      <td class="greyout">Brooks Koepka +3
+      <td class="greyout leftborder">Brooks Koepka +3
 E thru 13</td>
+      <td class="greyout">Viktor Hovland(W) +4
++4 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Larry Judge</td>
@@ -207,17 +207,17 @@ E thru 13</td>
       <td class="bigbold">Paxton Watson</td>
       <td class="bigbold">-2</td>
       <td>Joaquin Niemann -3
-E thru 3</td>
+E thru 4</td>
       <td>Cameron Smith -2
 +2 thru 4</td>
       <td>Tommy Fleetwood(W) +1
--2 thru 4</td>
+-2 thru 5</td>
       <td>Justin Thomas +2
 -2 thru 3</td>
-      <td class="greyout leftborder">Viktor Hovland +3
-+3 thru 13</td>
-      <td class="greyout">Rory McIlroy +3
+      <td class="greyout leftborder">Rory McIlroy +3
 +2 thru 13</td>
+      <td class="greyout">Viktor Hovland +4
++4 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
@@ -324,12 +324,12 @@ E thru 13</td>
 +1 thru 14</td>
       <td>Jon Rahm +1
 -1 thru 14</td>
-      <td>Viktor Hovland +3
-+3 thru 13</td>
-      <td class="greyout leftborder">Brooks Koepka +3
+      <td>Brooks Koepka +3
 E thru 13</td>
-      <td class="greyout">Jordan Spieth(W) +4
+      <td class="greyout leftborder">Jordan Spieth(W) +4
 +2 thru 14</td>
+      <td class="greyout">Viktor Hovland +4
++4 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
@@ -349,15 +349,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">2</td>
+      <td class="bigbold">3</td>
       <td>Cameron Smith(W) -2
 +2 thru 4</td>
       <td>Corey Conners -1
 +1 (F)</td>
       <td>Justin Thomas +2
 -2 thru 3</td>
-      <td>Viktor Hovland +3
-+3 thru 13</td>
+      <td>Viktor Hovland +4
++4 thru 14</td>
       <td class="greyout leftborder">Jordan Spieth +4
 +2 thru 14</td>
       <td class="greyout">Xander Schauffele +6
@@ -386,12 +386,12 @@ Missed Cut</td>
 -1 thru 15</td>
       <td>Jon Rahm +1
 -1 thru 14</td>
-      <td>Viktor Hovland(W) +3
-+3 thru 13</td>
       <td>Brooks Koepka +3
 E thru 13</td>
-      <td class="greyout leftborder">Patrick Reed +3
+      <td>Patrick Reed +3
 +1 (F)</td>
+      <td class="greyout leftborder">Viktor Hovland(W) +4
++4 thru 14</td>
       <td class="greyout">Luke List +7
 +2 thru 7</td>
     </tr>
