--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:47:18 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:48:01 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -214,8 +214,8 @@ E thru 2</td>
 +1 (F)</td>
       <td>Will Zalatoris E
 +1 thru 14</td>
-      <td class="greyout leftborder">Viktor Hovland +3
-+3 thru 13</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 thru 14</td>
       <td class="greyout">Xander Schauffele(W) +6
 +4 thru 13</td>
     </tr>
@@ -294,8 +294,8 @@ E thru 2</td>
 +1 (F)</td>
       <td>Tyrrell Hatton +1
 +1 thru 16</td>
-      <td class="greyout leftborder">Viktor Hovland(W) +3
-+3 thru 13</td>
+      <td class="greyout leftborder">Viktor Hovland(W) +4
++4 thru 14</td>
       <td class="greyout">Sam Burns +5
 +2 thru 16</td>
     </tr>
@@ -310,10 +310,10 @@ E thru 2</td>
 +1 thru 14</td>
       <td>Shane Lowry +1
 E thru 6</td>
-      <td class="greyout leftborder">Viktor Hovland +3
-+3 thru 13</td>
-      <td class="greyout">Brooks Koepka +3
+      <td class="greyout leftborder">Brooks Koepka +3
 E thru 13</td>
+      <td class="greyout">Viktor Hovland +4
++4 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Albert Selina</td>
@@ -344,8 +344,8 @@ E thru 2</td>
 +1 thru 14</td>
       <td class="greyout leftborder">Jon Rahm(W) +1
 -1 thru 14</td>
-      <td class="greyout">Viktor Hovland +3
-+3 thru 13</td>
+      <td class="greyout">Viktor Hovland +4
++4 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Lyle Rattray</td>
@@ -358,8 +358,8 @@ E thru 2</td>
 +1 (F)</td>
       <td>Jon Rahm +1
 -1 thru 14</td>
-      <td class="greyout leftborder">Viktor Hovland +3
-+3 thru 13</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 thru 14</td>
       <td class="greyout">Sam Burns +5
 +2 thru 16</td>
     </tr>
@@ -392,8 +392,8 @@ E thru 2</td>
 E thru 6</td>
       <td class="greyout leftborder">Jon Rahm +1
 -1 thru 14</td>
-      <td class="greyout">Viktor Hovland +3
-+3 thru 13</td>
+      <td class="greyout">Viktor Hovland +4
++4 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Wilson</td>
@@ -543,7 +543,7 @@ E thru 13</td>
       <td class="bigbold">Barb Wellard</td>
       <td class="bigbold">-1</td>
       <td>Joaquin Niemann -3
-E thru 3</td>
+E thru 4</td>
       <td>Cameron Smith -2
 +2 thru 4</td>
       <td>Jon Rahm(W) +1
@@ -620,22 +620,6 @@ E thru 13</td>
 +4 thru 13</td>
     </tr>
     <tr>
-      <td class="bigbold">Low Golf IQ</td>
-      <td class="bigbold">-1</td>
-      <td>Joaquin Niemann -3
-E thru 3</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Shane Lowry(W) +1
-E thru 6</td>
-      <td>Brian Harman +2
-E thru 8</td>
-      <td class="greyout leftborder">Viktor Hovland +3
-+3 thru 13</td>
-      <td class="greyout">Sam Burns +5
-+2 thru 16</td>
-    </tr>
-    <tr>
       <td class="bigbold">Walk 1</td>
       <td class="bigbold">0</td>
       <td>Patrick Cantlay -1
@@ -646,8 +630,8 @@ E thru 8</td>
 +1 thru 14</td>
       <td>Jon Rahm +1
 -1 thru 14</td>
-      <td class="greyout leftborder">Viktor Hovland(W) +3
-+3 thru 13</td>
+      <td class="greyout leftborder">Viktor Hovland(W) +4
++4 thru 14</td>
       <td class="greyout">Xander Schauffele +6
 +4 thru 13</td>
     </tr>
@@ -694,10 +678,10 @@ E thru 13</td>
 E thru 6</td>
       <td>Justin Thomas(W) +2
 -2 thru 3</td>
-      <td class="greyout leftborder">Viktor Hovland +3
-+3 thru 13</td>
-      <td class="greyout">Brooks Koepka +3
+      <td class="greyout leftborder">Brooks Koepka +3
 E thru 13</td>
+      <td class="greyout">Viktor Hovland +4
++4 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Neville Spillman</td>
@@ -716,6 +700,22 @@ E thru 13</td>
 +2 thru 16</td>
     </tr>
     <tr>
+      <td class="bigbold">Low Golf IQ</td>
+      <td class="bigbold">0</td>
+      <td>Joaquin Niemann -3
+E thru 4</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Shane Lowry(W) +1
+E thru 6</td>
+      <td>Brian Harman +3
++1 thru 9</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 thru 14</td>
+      <td class="greyout">Sam Burns +5
++2 thru 16</td>
+    </tr>
+    <tr>
       <td class="bigbold">Santorini Sunsets</td>
       <td class="bigbold">1</td>
       <td>Scottie Scheffler -3
@@ -724,10 +724,10 @@ E thru 2</td>
 +1 thru 14</td>
       <td>Justin Thomas(W) +2
 -2 thru 3</td>
-      <td>Viktor Hovland +3
-+3 thru 13</td>
-      <td class="greyout leftborder">Rory McIlroy +3
+      <td>Rory McIlroy +3
 +2 thru 13</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 thru 14</td>
       <td class="greyout">Xander Schauffele +6
 +4 thru 13</td>
     </tr>
@@ -742,8 +742,8 @@ E thru 2</td>
 -1 thru 14</td>
       <td>Rory McIlroy(W) +3
 +2 thru 13</td>
-      <td class="greyout leftborder">Viktor Hovland +3
-+3 thru 13</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 thru 14</td>
       <td class="greyout">Jordan Spieth +4
 +2 thru 14</td>
     </tr>
@@ -772,12 +772,12 @@ E thru 13</td>
 +1 thru 14</td>
       <td>Jon Rahm +1
 -1 thru 14</td>
-      <td>Viktor Hovland +3
-+3 thru 13</td>
-      <td class="greyout leftborder">Brooks Koepka +3
+      <td>Brooks Koepka +3
 E thru 13</td>
-      <td class="greyout">Jordan Spieth(W) +4
+      <td class="greyout leftborder">Jordan Spieth(W) +4
 +2 thru 14</td>
+      <td class="greyout">Viktor Hovland +4
++4 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
@@ -790,8 +790,8 @@ E thru 13</td>
 -1 thru 14</td>
       <td>Justin Thomas(W) +2
 -2 thru 3</td>
-      <td class="greyout leftborder">Viktor Hovland +3
-+3 thru 13</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 thru 14</td>
       <td class="greyout">Xander Schauffele +6
 +4 thru 13</td>
     </tr>
@@ -804,27 +804,11 @@ E thru 13</td>
 -1 thru 15</td>
       <td>Will Zalatoris E
 +1 thru 14</td>
-      <td>Viktor Hovland +3
-+3 thru 13</td>
-      <td class="greyout leftborder">Rory McIlroy +3
+      <td>Rory McIlroy +3
 +2 thru 13</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 thru 14</td>
       <td class="greyout">Xander Schauffele(W) +6
-+4 thru 13</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">2</td>
-      <td>Cameron Smith(W) -2
-+2 thru 4</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Justin Thomas +2
--2 thru 3</td>
-      <td>Viktor Hovland +3
-+3 thru 13</td>
-      <td class="greyout leftborder">Jordan Spieth +4
-+2 thru 14</td>
-      <td class="greyout">Xander Schauffele +6
 +4 thru 13</td>
     </tr>
     <tr>
@@ -860,6 +844,22 @@ E thru 13</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">3</td>
+      <td>Cameron Smith(W) -2
++2 thru 4</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Justin Thomas +2
+-2 thru 3</td>
+      <td>Viktor Hovland +4
++4 thru 14</td>
+      <td class="greyout leftborder">Jordan Spieth +4
++2 thru 14</td>
+      <td class="greyout">Xander Schauffele +6
++4 thru 13</td>
+    </tr>
+    <tr>
       <td class="bigbold">Ez Game Ez Life</td>
       <td class="bigbold">3</td>
       <td>Collin Morikawa E
@@ -870,10 +870,10 @@ Missed Cut</td>
 +2 thru 3</td>
       <td>Justin Thomas +2
 -2 thru 3</td>
-      <td class="greyout leftborder">Viktor Hovland +3
-+3 thru 13</td>
-      <td class="greyout">Rory McIlroy +3
+      <td class="greyout leftborder">Rory McIlroy +3
 +2 thru 13</td>
+      <td class="greyout">Viktor Hovland +4
++4 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">NewCastle Magpies</td>
@@ -892,22 +892,6 @@ E thru 13</td>
 +4 thru 13</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">4</td>
-      <td>Scottie Scheffler -3
-E thru 2</td>
-      <td>Jon Rahm(W) +1
--1 thru 14</td>
-      <td>Viktor Hovland +3
-+3 thru 13</td>
-      <td>Brooks Koepka +3
-E thru 13</td>
-      <td class="greyout leftborder">Jordan Spieth +4
-+2 thru 14</td>
-      <td class="greyout">Xander Schauffele +6
-+4 thru 13</td>
-    </tr>
-    <tr>
       <td class="bigbold">Glitter Girl</td>
       <td class="bigbold">4</td>
       <td>Cameron Smith -2
@@ -916,10 +900,10 @@ E thru 13</td>
 -1 thru 14</td>
       <td>Bubba Watson +2
 +1 (F)</td>
-      <td>Viktor Hovland +3
-+3 thru 13</td>
-      <td class="greyout leftborder">Rory McIlroy +3
+      <td>Rory McIlroy +3
 +2 thru 13</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 thru 14</td>
       <td class="greyout">Jordan Spieth +4
 +2 thru 14</td>
     </tr>
@@ -930,12 +914,28 @@ E thru 13</td>
 E thru 2</td>
       <td>Jon Rahm(W) +1
 -1 thru 14</td>
-      <td>Viktor Hovland +3
-+3 thru 13</td>
       <td>Brooks Koepka +3
 E thru 13</td>
-      <td class="greyout leftborder">Rory McIlroy +3
+      <td>Rory McIlroy +3
 +2 thru 13</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 thru 14</td>
+      <td class="greyout">Xander Schauffele +6
++4 thru 13</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Bryson</td>
+      <td class="bigbold">5</td>
+      <td>Scottie Scheffler -3
+E thru 2</td>
+      <td>Jon Rahm(W) +1
+-1 thru 14</td>
+      <td>Brooks Koepka +3
+E thru 13</td>
+      <td>Viktor Hovland +4
++4 thru 14</td>
+      <td class="greyout leftborder">Jordan Spieth +4
++2 thru 14</td>
       <td class="greyout">Xander Schauffele +6
 +4 thru 13</td>
     </tr>
@@ -972,22 +972,6 @@ E thru 13</td>
 +4 thru 13</td>
     </tr>
     <tr>
-      <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">6</td>
-      <td>Will Zalatoris E
-+1 thru 14</td>
-      <td>Jon Rahm +1
--1 thru 14</td>
-      <td>Justin Thomas(W) +2
--2 thru 3</td>
-      <td>Viktor Hovland +3
-+3 thru 13</td>
-      <td class="greyout leftborder">Jordan Spieth +4
-+2 thru 14</td>
-      <td class="greyout">Sam Burns +5
-+2 thru 16</td>
-    </tr>
-    <tr>
       <td class="bigbold">Downhill Down Wind</td>
       <td class="bigbold">6</td>
       <td>Collin Morikawa(W) E
@@ -996,10 +980,10 @@ E thru 13</td>
 +2 thru 3</td>
       <td>Justin Thomas +2
 -2 thru 3</td>
-      <td>Viktor Hovland +3
-+3 thru 13</td>
-      <td class="greyout leftborder">Rory McIlroy +3
+      <td>Rory McIlroy +3
 +2 thru 13</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 thru 14</td>
       <td class="greyout">Gary Woodland +8
 +5 (F)</td>
     </tr>
@@ -1012,12 +996,28 @@ E thru 13</td>
 -1 thru 14</td>
       <td>Justin Thomas +2
 -2 thru 3</td>
-      <td>Viktor Hovland +3
-+3 thru 13</td>
-      <td class="greyout leftborder">Brooks Koepka +3
+      <td>Brooks Koepka +3
 E thru 13</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 thru 14</td>
       <td class="greyout">Jordan Spieth +4
 +2 thru 14</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Glen Wilson</td>
+      <td class="bigbold">7</td>
+      <td>Will Zalatoris E
++1 thru 14</td>
+      <td>Jon Rahm +1
+-1 thru 14</td>
+      <td>Justin Thomas(W) +2
+-2 thru 3</td>
+      <td>Viktor Hovland +4
++4 thru 14</td>
+      <td class="greyout leftborder">Jordan Spieth +4
++2 thru 14</td>
+      <td class="greyout">Sam Burns +5
++2 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
@@ -1026,12 +1026,12 @@ E thru 13</td>
 -1 thru 15</td>
       <td>Jon Rahm +1
 -1 thru 14</td>
-      <td>Viktor Hovland(W) +3
-+3 thru 13</td>
       <td>Brooks Koepka +3
 E thru 13</td>
-      <td class="greyout leftborder">Patrick Reed +3
+      <td>Patrick Reed +3
 +1 (F)</td>
+      <td class="greyout leftborder">Viktor Hovland(W) +4
++4 thru 14</td>
       <td class="greyout">Jordan Spieth +4
 +2 thru 14</td>
     </tr>
@@ -1053,15 +1053,15 @@ E thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Tony Muir</td>
-      <td class="bigbold">9</td>
+      <td class="bigbold">10</td>
       <td>Jon Rahm(W) +1
 -1 thru 14</td>
       <td>Justin Thomas +2
 -2 thru 3</td>
-      <td>Viktor Hovland +3
-+3 thru 13</td>
       <td>Brooks Koepka +3
 E thru 13</td>
+      <td>Viktor Hovland +4
++4 thru 14</td>
       <td class="greyout leftborder">Xander Schauffele +6
 +4 thru 13</td>
       <td class="greyout">Louis Oosthuizen
@@ -1069,15 +1069,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Yellow in Augusta</td>
-      <td class="bigbold">9</td>
+      <td class="bigbold">10</td>
       <td>Jon Rahm +1
 -1 thru 14</td>
       <td>Justin Thomas(W) +2
 -2 thru 3</td>
-      <td>Viktor Hovland +3
-+3 thru 13</td>
       <td>Brooks Koepka +3
 E thru 13</td>
+      <td>Viktor Hovland +4
++4 thru 14</td>
       <td class="greyout leftborder">Jordan Spieth +4
 +2 thru 14</td>
       <td class="greyout">Xander Schauffele +6
@@ -1085,13 +1085,13 @@ E thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Bryan Francis</td>
-      <td class="bigbold">10</td>
+      <td class="bigbold">11</td>
       <td>Jon Rahm +1
 -1 thru 14</td>
       <td>Justin Thomas(W) +2
 -2 thru 3</td>
-      <td>Viktor Hovland +3
-+3 thru 13</td>
+      <td>Viktor Hovland +4
++4 thru 14</td>
       <td>Jordan Spieth +4
 +2 thru 14</td>
       <td class="greyout leftborder">Xander Schauffele +6
