--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:49:27 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:50:10 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -157,19 +157,51 @@ E thru 6</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">-3</td>
+      <td class="bigbold">-4</td>
       <td>Sungjae Im -4
 +1 thru 17</td>
+      <td>Collin Morikawa -1
+-2 thru 16</td>
       <td>Patrick Cantlay -1
 +1 thru 14</td>
-      <td>Collin Morikawa E
--1 thru 15</td>
       <td>Justin Thomas +2
 -2 thru 3</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 13</td>
       <td class="greyout">Viktor Hovland(W) +4
 +4 thru 14</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">-3</td>
+      <td>Tony Finau -2
+-1 thru 2</td>
+      <td>Collin Morikawa -1
+-2 thru 16</td>
+      <td>Will Zalatoris E
++1 thru 14</td>
+      <td>Daniel Berger E
++1 thru 5</td>
+      <td class="greyout leftborder">Justin Thomas(W) +2
+-2 thru 3</td>
+      <td class="greyout">Brooks Koepka +3
+E thru 13</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Shane Tummon</td>
+      <td class="bigbold">-3</td>
+      <td>Tony Finau -2
+-1 thru 2</td>
+      <td>Collin Morikawa -1
+-2 thru 16</td>
+      <td>Patrick Cantlay -1
++1 thru 14</td>
+      <td>Jon Rahm(W) +1
+-1 thru 14</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 13</td>
+      <td class="greyout">Jordan Spieth +4
++2 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Larry Judge</td>
@@ -188,22 +220,6 @@ E thru 2</td>
 +4 thru 14</td>
     </tr>
     <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">-2</td>
-      <td>Tony Finau -2
--1 thru 2</td>
-      <td>Collin Morikawa E
--1 thru 15</td>
-      <td>Will Zalatoris E
-+1 thru 14</td>
-      <td>Daniel Berger E
-+1 thru 5</td>
-      <td class="greyout leftborder">Justin Thomas(W) +2
--2 thru 3</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 13</td>
-    </tr>
-    <tr>
       <td class="bigbold">Paxton Watson</td>
       <td class="bigbold">-2</td>
       <td>Joaquin Niemann -3
@@ -218,22 +234,6 @@ E thru 4</td>
 +2 thru 13</td>
       <td class="greyout">Viktor Hovland +4
 +4 thru 14</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">-2</td>
-      <td>Tony Finau -2
--1 thru 2</td>
-      <td>Patrick Cantlay -1
-+1 thru 14</td>
-      <td>Collin Morikawa E
--1 thru 15</td>
-      <td>Jon Rahm(W) +1
--1 thru 14</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 13</td>
-      <td class="greyout">Jordan Spieth +4
-+2 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
@@ -252,6 +252,22 @@ E thru 13</td>
 +2 thru 14</td>
     </tr>
     <tr>
+      <td class="bigbold">John Nixon</td>
+      <td class="bigbold">-1</td>
+      <td>Cameron Smith(W) -2
++2 thru 4</td>
+      <td>Collin Morikawa -1
+-2 thru 16</td>
+      <td>Patrick Cantlay -1
++1 thru 14</td>
+      <td>Brooks Koepka +3
+E thru 13</td>
+      <td class="greyout leftborder">Rory McIlroy +3
++2 thru 13</td>
+      <td class="greyout">Xander Schauffele +6
++4 thru 14</td>
+    </tr>
+    <tr>
       <td class="bigbold">Andrew Winchester</td>
       <td class="bigbold">-1</td>
       <td>Cameron Smith -2
@@ -268,6 +284,22 @@ E thru 6</td>
 E thru 13</td>
     </tr>
     <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">-1</td>
+      <td>Corey Conners(W) -1
++1 (F)</td>
+      <td>Collin Morikawa -1
+-2 thru 16</td>
+      <td>Daniel Berger E
++1 thru 5</td>
+      <td>Jon Rahm +1
+-1 thru 14</td>
+      <td class="greyout leftborder">Robert MacIntyre +2
++1 (F)</td>
+      <td class="greyout">Jordan Spieth +4
++2 thru 14</td>
+    </tr>
+    <tr>
       <td class="bigbold">Derrick Shea</td>
       <td class="bigbold">0</td>
       <td>Patrick Cantlay -1
@@ -282,38 +314,6 @@ E thru 13</td>
 E thru 6</td>
       <td class="greyout">Justin Thomas(W) +2
 -2 thru 3</td>
-    </tr>
-    <tr>
-      <td class="bigbold">John Nixon</td>
-      <td class="bigbold">0</td>
-      <td>Cameron Smith(W) -2
-+2 thru 4</td>
-      <td>Patrick Cantlay -1
-+1 thru 14</td>
-      <td>Collin Morikawa E
--1 thru 15</td>
-      <td>Brooks Koepka +3
-E thru 13</td>
-      <td class="greyout leftborder">Rory McIlroy +3
-+2 thru 13</td>
-      <td class="greyout">Xander Schauffele +6
-+4 thru 14</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">0</td>
-      <td>Corey Conners(W) -1
-+1 (F)</td>
-      <td>Collin Morikawa E
--1 thru 15</td>
-      <td>Daniel Berger E
-+1 thru 5</td>
-      <td>Jon Rahm +1
--1 thru 14</td>
-      <td class="greyout leftborder">Robert MacIntyre +2
-+1 (F)</td>
-      <td class="greyout">Jordan Spieth +4
-+2 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
@@ -364,6 +364,22 @@ Missed Cut</td>
 +4 thru 14</td>
     </tr>
     <tr>
+      <td class="bigbold">Jeff Turnham</td>
+      <td class="bigbold">6</td>
+      <td>Collin Morikawa -1
+-2 thru 16</td>
+      <td>Jon Rahm +1
+-1 thru 14</td>
+      <td>Brooks Koepka +3
+E thru 13</td>
+      <td>Patrick Reed +3
++1 (F)</td>
+      <td class="greyout leftborder">Viktor Hovland(W) +4
++4 thru 14</td>
+      <td class="greyout">Luke List +7
++2 thru 7</td>
+    </tr>
+    <tr>
       <td class="bigbold">Adam Ryan</td>
       <td class="bigbold">6</td>
       <td>Corey Conners -1
@@ -378,22 +394,6 @@ Missed Cut</td>
 +4 thru 14</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">7</td>
-      <td>Collin Morikawa E
--1 thru 15</td>
-      <td>Jon Rahm +1
--1 thru 14</td>
-      <td>Brooks Koepka +3
-E thru 13</td>
-      <td>Patrick Reed +3
-+1 (F)</td>
-      <td class="greyout leftborder">Viktor Hovland(W) +4
-+4 thru 14</td>
-      <td class="greyout">Luke List +7
-+2 thru 7</td>
     </tr>
   </tbody>
 </table>
