--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:49:27 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:50:10 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -165,7 +165,7 @@ E thru 2</td>
       <td>Corey Conners -1
 +1 (F)</td>
       <td>Talor Gooch -1
--1 thru 6</td>
+-1 thru 7</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 13</td>
       <td class="greyout">Xander Schauffele +6
@@ -229,7 +229,7 @@ E thru 2</td>
       <td>Corey Conners -1
 +1 (F)</td>
       <td>Talor Gooch -1
--1 thru 6</td>
+-1 thru 7</td>
       <td class="greyout leftborder">Jon Rahm(W) +1
 -1 thru 14</td>
       <td class="greyout">Brooks Koepka +3
@@ -396,6 +396,22 @@ E thru 6</td>
 +4 thru 14</td>
     </tr>
     <tr>
+      <td class="bigbold">Shane Hosegood</td>
+      <td class="bigbold">-3</td>
+      <td>Hideki Matsuyama -2
+-2 thru 3</td>
+      <td>Collin Morikawa(W) -1
+-2 thru 16</td>
+      <td>Patrick Cantlay -1
++1 thru 14</td>
+      <td>Jon Rahm +1
+-1 thru 14</td>
+      <td class="greyout leftborder">Jordan Spieth +4
++2 thru 14</td>
+      <td class="greyout">Paul Casey
+Out With Injury</td>
+    </tr>
+    <tr>
       <td class="bigbold">Matt Wilson</td>
       <td class="bigbold">-3</td>
       <td>Scottie Scheffler(W) -3
@@ -476,6 +492,22 @@ E thru 6</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Shane Tummon</td>
+      <td class="bigbold">-3</td>
+      <td>Tony Finau -2
+-1 thru 2</td>
+      <td>Patrick Cantlay -1
++1 thru 14</td>
+      <td>Collin Morikawa -1
+-2 thru 16</td>
+      <td>Jon Rahm(W) +1
+-1 thru 14</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 13</td>
+      <td class="greyout">Jordan Spieth +4
++2 thru 14</td>
+    </tr>
+    <tr>
       <td class="bigbold">Santorini Sunrises</td>
       <td class="bigbold">-2</td>
       <td>Cameron Smith -2
@@ -492,34 +524,34 @@ E thru 13</td>
 +2 thru 14</td>
     </tr>
     <tr>
-      <td class="bigbold">Shane Hosegood</td>
-      <td class="bigbold">-2</td>
-      <td>Hideki Matsuyama -2
--2 thru 3</td>
+      <td class="bigbold">Walk 1</td>
+      <td class="bigbold">-1</td>
       <td>Patrick Cantlay -1
 +1 thru 14</td>
-      <td>Collin Morikawa(W) E
--1 thru 15</td>
+      <td>Collin Morikawa -1
+-2 thru 16</td>
+      <td>Will Zalatoris E
++1 thru 14</td>
       <td>Jon Rahm +1
 -1 thru 14</td>
-      <td class="greyout leftborder">Jordan Spieth +4
-+2 thru 14</td>
-      <td class="greyout">Paul Casey
-Out With Injury</td>
+      <td class="greyout leftborder">Viktor Hovland(W) +4
++4 thru 14</td>
+      <td class="greyout">Xander Schauffele +6
++4 thru 14</td>
     </tr>
     <tr>
-      <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">-2</td>
-      <td>Tony Finau -2
--1 thru 2</td>
-      <td>Patrick Cantlay -1
-+1 thru 14</td>
-      <td>Collin Morikawa E
--1 thru 15</td>
-      <td>Jon Rahm(W) +1
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">-1</td>
+      <td>Corey Conners(W) -1
++1 (F)</td>
+      <td>Collin Morikawa -1
+-2 thru 16</td>
+      <td>Daniel Berger E
++1 thru 5</td>
+      <td>Jon Rahm +1
 -1 thru 14</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 13</td>
+      <td class="greyout leftborder">Robert MacIntyre +2
++1 (F)</td>
       <td class="greyout">Jordan Spieth +4
 +2 thru 14</td>
     </tr>
@@ -588,22 +620,6 @@ E thru 13</td>
 +2 thru 14</td>
     </tr>
     <tr>
-      <td class="bigbold">Walk 1</td>
-      <td class="bigbold">0</td>
-      <td>Patrick Cantlay -1
-+1 thru 14</td>
-      <td>Collin Morikawa E
--1 thru 15</td>
-      <td>Will Zalatoris E
-+1 thru 14</td>
-      <td>Jon Rahm +1
--1 thru 14</td>
-      <td class="greyout leftborder">Viktor Hovland(W) +4
-+4 thru 14</td>
-      <td class="greyout">Xander Schauffele +6
-+4 thru 14</td>
-    </tr>
-    <tr>
       <td class="bigbold">Don Shaw</td>
       <td class="bigbold">0</td>
       <td>Cameron Smith -2
@@ -618,22 +634,6 @@ E thru 13</td>
 +2 thru 16</td>
       <td class="greyout">Xander Schauffele +6
 +4 thru 14</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">0</td>
-      <td>Corey Conners(W) -1
-+1 (F)</td>
-      <td>Daniel Berger E
-+1 thru 5</td>
-      <td>Collin Morikawa E
--1 thru 15</td>
-      <td>Jon Rahm +1
--1 thru 14</td>
-      <td class="greyout leftborder">Robert MacIntyre +2
-+1 (F)</td>
-      <td class="greyout">Jordan Spieth +4
-+2 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey A</td>
@@ -764,6 +764,22 @@ E thru 13</td>
 +4 thru 14</td>
     </tr>
     <tr>
+      <td class="bigbold">Grace</td>
+      <td class="bigbold">1</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Collin Morikawa -1
+-2 thru 16</td>
+      <td>Will Zalatoris E
++1 thru 14</td>
+      <td>Rory McIlroy +3
++2 thru 13</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 thru 14</td>
+      <td class="greyout">Xander Schauffele(W) +6
++4 thru 14</td>
+    </tr>
+    <tr>
       <td class="bigbold">Matt Tummon</td>
       <td class="bigbold">1</td>
       <td>Dustin Johnson -2
@@ -793,22 +809,6 @@ E thru 13</td>
       <td class="greyout leftborder">Viktor Hovland +4
 +4 thru 14</td>
       <td class="greyout">Xander Schauffele +6
-+4 thru 14</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Grace</td>
-      <td class="bigbold">2</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Collin Morikawa E
--1 thru 15</td>
-      <td>Will Zalatoris E
-+1 thru 14</td>
-      <td>Rory McIlroy +3
-+2 thru 13</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-+4 thru 14</td>
-      <td class="greyout">Xander Schauffele(W) +6
 +4 thru 14</td>
     </tr>
     <tr>
@@ -844,6 +844,22 @@ E thru 13</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">NewCastle Magpies</td>
+      <td class="bigbold">3</td>
+      <td>Patrick Cantlay -1
++1 thru 14</td>
+      <td>Collin Morikawa -1
+-2 thru 16</td>
+      <td>Justin Thomas(W) +2
+-2 thru 3</td>
+      <td>Brooks Koepka +3
+E thru 13</td>
+      <td class="greyout leftborder">Jordan Spieth +4
++2 thru 14</td>
+      <td class="greyout">Xander Schauffele +6
++4 thru 14</td>
+    </tr>
+    <tr>
       <td class="bigbold">Neil Hardy</td>
       <td class="bigbold">3</td>
       <td>Cameron Smith(W) -2
@@ -860,26 +876,10 @@ Missed Cut</td>
 +4 thru 14</td>
     </tr>
     <tr>
-      <td class="bigbold">NewCastle Magpies</td>
-      <td class="bigbold">4</td>
-      <td>Patrick Cantlay -1
-+1 thru 14</td>
-      <td>Collin Morikawa E
--1 thru 15</td>
-      <td>Justin Thomas(W) +2
--2 thru 3</td>
-      <td>Brooks Koepka +3
-E thru 13</td>
-      <td class="greyout leftborder">Jordan Spieth +4
-+2 thru 14</td>
-      <td class="greyout">Xander Schauffele +6
-+4 thru 14</td>
-    </tr>
-    <tr>
       <td class="bigbold">Ez Game Ez Life</td>
-      <td class="bigbold">4</td>
-      <td>Collin Morikawa E
--1 thru 15</td>
+      <td class="bigbold">3</td>
+      <td>Collin Morikawa -1
+-2 thru 16</td>
       <td>Will Zalatoris E
 +1 thru 14</td>
       <td>Tiger Woods(W) +2
@@ -972,6 +972,38 @@ E thru 13</td>
 +4 thru 14</td>
     </tr>
     <tr>
+      <td class="bigbold">Jeff Turnham</td>
+      <td class="bigbold">6</td>
+      <td>Collin Morikawa -1
+-2 thru 16</td>
+      <td>Jon Rahm +1
+-1 thru 14</td>
+      <td>Brooks Koepka +3
+E thru 13</td>
+      <td>Patrick Reed +3
++1 (F)</td>
+      <td class="greyout leftborder">Viktor Hovland(W) +4
++4 thru 14</td>
+      <td class="greyout">Jordan Spieth +4
++2 thru 14</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">6</td>
+      <td>Collin Morikawa(W) -1
+-2 thru 16</td>
+      <td>Justin Thomas +2
+-2 thru 3</td>
+      <td>Tiger Woods +2
++3 thru 4</td>
+      <td>Rory McIlroy +3
++2 thru 13</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 thru 14</td>
+      <td class="greyout">Gary Woodland +8
++5 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Kash Ahmad</td>
       <td class="bigbold">6</td>
       <td>Will Zalatoris E
@@ -1002,38 +1034,6 @@ E thru 13</td>
 +2 thru 14</td>
       <td class="greyout">Sam Burns +5
 +2 thru 16</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">7</td>
-      <td>Collin Morikawa E
--1 thru 15</td>
-      <td>Jon Rahm +1
--1 thru 14</td>
-      <td>Brooks Koepka +3
-E thru 13</td>
-      <td>Patrick Reed +3
-+1 (F)</td>
-      <td class="greyout leftborder">Viktor Hovland(W) +4
-+4 thru 14</td>
-      <td class="greyout">Jordan Spieth +4
-+2 thru 14</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Downhill Down Wind</td>
-      <td class="bigbold">7</td>
-      <td>Collin Morikawa(W) E
--1 thru 15</td>
-      <td>Justin Thomas +2
--2 thru 3</td>
-      <td>Tiger Woods +2
-+3 thru 4</td>
-      <td>Rory McIlroy +3
-+2 thru 13</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-+4 thru 14</td>
-      <td class="greyout">Gary Woodland +8
-+5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Benjac</td>
