--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:50:53 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:51:36 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -316,22 +316,6 @@ E thru 13</td>
 +4 thru 14</td>
     </tr>
     <tr>
-      <td class="bigbold">Albert Selina</td>
-      <td class="bigbold">-4</td>
-      <td>Scottie Scheffler -3
-E thru 2</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Webb Simpson E
-+1 thru 17</td>
-      <td>Will Zalatoris E
-+1 thru 14</td>
-      <td class="greyout leftborder">Jon Rahm(W) +1
--1 thru 14</td>
-      <td class="greyout">Xander Schauffele +6
-+4 thru 14</td>
-    </tr>
-    <tr>
       <td class="bigbold">Hadrian&#39;s Wall</td>
       <td class="bigbold">-4</td>
       <td>Cameron Smith -2
@@ -393,6 +377,22 @@ E thru 6</td>
       <td class="greyout leftborder">Jon Rahm +1
 -1 thru 14</td>
       <td class="greyout">Viktor Hovland +4
++4 thru 14</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Albert Selina</td>
+      <td class="bigbold">-3</td>
+      <td>Scottie Scheffler -3
+E thru 2</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Will Zalatoris E
++1 thru 14</td>
+      <td>Jon Rahm(W) +1
+-1 thru 14</td>
+      <td class="greyout leftborder">Webb Simpson +1
++2 (F)</td>
+      <td class="greyout">Xander Schauffele +6
 +4 thru 14</td>
     </tr>
     <tr>
