--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:53:02 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:53:45 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -157,9 +157,9 @@ E thru 6</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">-4</td>
-      <td>Sungjae Im -4
-+1 thru 17</td>
+      <td class="bigbold">-3</td>
+      <td>Sungjae Im -3
++2 (F)</td>
       <td>Collin Morikawa -1
 -2 thru 16</td>
       <td>Patrick Cantlay -1
@@ -214,10 +214,10 @@ E thru 2</td>
 +1 (F)</td>
       <td>Jordan Spieth +4
 +2 thru 14</td>
-      <td class="greyout leftborder">Sam Burns +5
-+2 thru 16</td>
-      <td class="greyout">Xander Schauffele +6
+      <td class="greyout leftborder">Xander Schauffele +6
 +4 thru 14</td>
+      <td class="greyout">Sam Burns +6
++3 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
