--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:53:45 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:54:28 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -308,12 +308,12 @@ E thru 13</td>
 +1 (F)</td>
       <td>Jon Rahm +1
 -1 thru 14</td>
-      <td>Tyrrell Hatton +1
-+1 thru 16</td>
-      <td class="greyout leftborder">Shane Lowry +1
+      <td>Shane Lowry +1
 E thru 6</td>
-      <td class="greyout">Justin Thomas(W) +2
+      <td class="greyout leftborder">Justin Thomas(W) +2
 -2 thru 3</td>
+      <td class="greyout">Tyrrell Hatton +2
++2 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
