--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:59:29 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 3:00:12 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -166,10 +166,10 @@ E thru 6</td>
 +1 thru 15</td>
       <td>Justin Thomas +2
 -2 thru 3</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 13</td>
-      <td class="greyout">Viktor Hovland(W) +4
+      <td class="greyout leftborder">Viktor Hovland(W) +4
 +4 thru 14</td>
+      <td class="greyout">Brooks Koepka +4
++1 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
@@ -184,8 +184,8 @@ E thru 13</td>
 +1 thru 5</td>
       <td class="greyout leftborder">Justin Thomas(W) +2
 -2 thru 3</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 13</td>
+      <td class="greyout">Brooks Koepka +4
++1 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
@@ -198,10 +198,10 @@ E thru 13</td>
 +1 thru 15</td>
       <td>Jon Rahm(W) +1
 -1 thru 15</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 13</td>
-      <td class="greyout">Jordan Spieth +4
+      <td class="greyout leftborder">Jordan Spieth +4
 +2 thru 14</td>
+      <td class="greyout">Brooks Koepka +4
++1 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
@@ -215,7 +215,7 @@ E thru 4</td>
       <td>Justin Thomas +2
 -2 thru 3</td>
       <td class="greyout leftborder">Rory McIlroy +3
-+2 thru 13</td>
++2 thru 14</td>
       <td class="greyout">Viktor Hovland +4
 +4 thru 14</td>
     </tr>
@@ -244,10 +244,10 @@ E thru 4</td>
 -2 thru 16</td>
       <td>Patrick Cantlay -1
 +1 thru 15</td>
-      <td>Brooks Koepka +3
-E thru 13</td>
-      <td class="greyout leftborder">Rory McIlroy +3
-+2 thru 13</td>
+      <td>Rory McIlroy +3
++2 thru 14</td>
+      <td class="greyout leftborder">Brooks Koepka +4
++1 thru 14</td>
       <td class="greyout">Xander Schauffele +6
 +4 thru 14</td>
     </tr>
@@ -264,8 +264,8 @@ E thru 13</td>
 E thru 6</td>
       <td class="greyout leftborder">Justin Thomas(W) +2
 -2 thru 3</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 13</td>
+      <td class="greyout">Brooks Koepka +4
++1 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
@@ -310,26 +310,10 @@ E thru 6</td>
 -1 thru 15</td>
       <td>Shane Lowry +1
 E thru 6</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 13</td>
+      <td class="greyout leftborder">Brooks Koepka +4
++1 thru 14</td>
       <td class="greyout">Jordan Spieth +4
 +2 thru 14</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">1</td>
-      <td>Dustin Johnson -2
-+1 thru 16</td>
-      <td>Patrick Cantlay -1
-+1 thru 15</td>
-      <td>Jon Rahm +1
--1 thru 15</td>
-      <td>Brooks Koepka +3
-E thru 13</td>
-      <td class="greyout leftborder">Jordan Spieth(W) +4
-+2 thru 14</td>
-      <td class="greyout">Viktor Hovland +4
-+4 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
@@ -348,6 +332,22 @@ E thru 13</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Matt Tummon</td>
+      <td class="bigbold">2</td>
+      <td>Dustin Johnson -2
++1 thru 16</td>
+      <td>Patrick Cantlay -1
++1 thru 15</td>
+      <td>Jon Rahm +1
+-1 thru 15</td>
+      <td>Jordan Spieth(W) +4
++2 thru 14</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 thru 14</td>
+      <td class="greyout">Brooks Koepka +4
++1 thru 14</td>
+    </tr>
+    <tr>
       <td class="bigbold">Neil Hardy</td>
       <td class="bigbold">3</td>
       <td>Cameron Smith(W) -2
@@ -364,22 +364,6 @@ Missed Cut</td>
 +4 thru 14</td>
     </tr>
     <tr>
-      <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">6</td>
-      <td>Collin Morikawa -1
--2 thru 16</td>
-      <td>Jon Rahm +1
--1 thru 15</td>
-      <td>Brooks Koepka +3
-E thru 13</td>
-      <td>Patrick Reed +3
-+1 (F)</td>
-      <td class="greyout leftborder">Viktor Hovland(W) +4
-+4 thru 14</td>
-      <td class="greyout">Luke List +7
-+2 thru 7</td>
-    </tr>
-    <tr>
       <td class="bigbold">Adam Ryan</td>
       <td class="bigbold">6</td>
       <td>Corey Conners -1
@@ -394,6 +378,22 @@ E thru 13</td>
 +4 thru 14</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jeff Turnham</td>
+      <td class="bigbold">7</td>
+      <td>Collin Morikawa -1
+-2 thru 16</td>
+      <td>Jon Rahm +1
+-1 thru 15</td>
+      <td>Patrick Reed +3
++1 (F)</td>
+      <td>Viktor Hovland(W) +4
++4 thru 14</td>
+      <td class="greyout leftborder">Brooks Koepka +4
++1 thru 14</td>
+      <td class="greyout">Luke List +7
++2 thru 7</td>
     </tr>
   </tbody>
 </table>
