--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 3:00:55 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 3:01:38 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -524,22 +524,6 @@ Missed Cut</td>
 +4 thru 14</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">-1</td>
-      <td>Corey Conners(W) -1
-+1 (F)</td>
-      <td>Collin Morikawa -1
--2 thru 16</td>
-      <td>Daniel Berger E
-+1 thru 5</td>
-      <td>Jon Rahm +1
--1 thru 15</td>
-      <td class="greyout leftborder">Robert MacIntyre +2
-+1 (F)</td>
-      <td class="greyout">Jordan Spieth +4
-+2 thru 14</td>
-    </tr>
-    <tr>
       <td class="bigbold">BCREAMED</td>
       <td class="bigbold">-1</td>
       <td>Cameron Smith(W) -2
@@ -602,6 +586,22 @@ E thru 6</td>
 +3 thru 17</td>
       <td class="greyout">Xander Schauffele +6
 +4 thru 14</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">0</td>
+      <td>Corey Conners(W) -1
++1 (F)</td>
+      <td>Collin Morikawa -1
+-2 thru 16</td>
+      <td>Daniel Berger +1
++2 thru 6</td>
+      <td>Jon Rahm +1
+-1 thru 15</td>
+      <td class="greyout leftborder">Robert MacIntyre +2
++1 (F)</td>
+      <td class="greyout">Jordan Spieth +4
++2 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Barb Wellard</td>
@@ -748,22 +748,6 @@ E thru 6</td>
 +4 thru 14</td>
     </tr>
     <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">2</td>
-      <td>Patrick Cantlay -1
-+1 thru 15</td>
-      <td>Daniel Berger E
-+1 thru 5</td>
-      <td>Jon Rahm +1
--1 thru 15</td>
-      <td>Justin Thomas(W) +2
--2 thru 4</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-+4 thru 14</td>
-      <td class="greyout">Xander Schauffele +6
-+4 thru 14</td>
-    </tr>
-    <tr>
       <td class="bigbold">Jabby</td>
       <td class="bigbold">2</td>
       <td>Corey Conners -1
@@ -810,6 +794,22 @@ E thru 6</td>
 +1 thru 14</td>
       <td class="greyout">Sam Burns +6
 +3 thru 17</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">3</td>
+      <td>Patrick Cantlay -1
++1 thru 15</td>
+      <td>Daniel Berger +1
++2 thru 6</td>
+      <td>Jon Rahm +1
+-1 thru 15</td>
+      <td>Justin Thomas(W) +2
+-2 thru 4</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 thru 14</td>
+      <td class="greyout">Xander Schauffele +6
++4 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Philip Dale</td>
