--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 3:00:55 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 3:01:38 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -172,22 +172,6 @@ E thru 6</td>
 +1 thru 14</td>
     </tr>
     <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">-3</td>
-      <td>Tony Finau -2
--1 thru 3</td>
-      <td>Collin Morikawa -1
--2 thru 16</td>
-      <td>Will Zalatoris E
-+1 thru 15</td>
-      <td>Daniel Berger E
-+1 thru 5</td>
-      <td class="greyout leftborder">Justin Thomas(W) +2
--2 thru 4</td>
-      <td class="greyout">Brooks Koepka +4
-+1 thru 14</td>
-    </tr>
-    <tr>
       <td class="bigbold">Shane Tummon</td>
       <td class="bigbold">-3</td>
       <td>Tony Finau -2
@@ -200,6 +184,22 @@ E thru 6</td>
 -1 thru 15</td>
       <td class="greyout leftborder">Jordan Spieth +4
 +2 thru 14</td>
+      <td class="greyout">Brooks Koepka +4
++1 thru 14</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">-2</td>
+      <td>Tony Finau -2
+-1 thru 3</td>
+      <td>Collin Morikawa -1
+-2 thru 16</td>
+      <td>Will Zalatoris E
++1 thru 15</td>
+      <td>Daniel Berger +1
++2 thru 6</td>
+      <td class="greyout leftborder">Justin Thomas(W) +2
+-2 thru 4</td>
       <td class="greyout">Brooks Koepka +4
 +1 thru 14</td>
     </tr>
@@ -268,22 +268,6 @@ E thru 6</td>
 +1 thru 14</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">-1</td>
-      <td>Corey Conners(W) -1
-+1 (F)</td>
-      <td>Collin Morikawa -1
--2 thru 16</td>
-      <td>Daniel Berger E
-+1 thru 5</td>
-      <td>Jon Rahm +1
--1 thru 15</td>
-      <td class="greyout leftborder">Robert MacIntyre +2
-+1 (F)</td>
-      <td class="greyout">Jordan Spieth +4
-+2 thru 14</td>
-    </tr>
-    <tr>
       <td class="bigbold">Derrick Shea</td>
       <td class="bigbold">0</td>
       <td>Patrick Cantlay -1
@@ -312,6 +296,22 @@ E thru 6</td>
 E thru 6</td>
       <td class="greyout leftborder">Brooks Koepka +4
 +1 thru 14</td>
+      <td class="greyout">Jordan Spieth +4
++2 thru 14</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">0</td>
+      <td>Corey Conners(W) -1
++1 (F)</td>
+      <td>Collin Morikawa -1
+-2 thru 16</td>
+      <td>Jon Rahm +1
+-1 thru 15</td>
+      <td>Daniel Berger +1
++2 thru 6</td>
+      <td class="greyout leftborder">Robert MacIntyre +2
++1 (F)</td>
       <td class="greyout">Jordan Spieth +4
 +2 thru 14</td>
     </tr>
